--- a/config/2022/config_PMI.json
+++ b/config/2022/config_PMI.json
@@ -78,10 +78,8 @@
         ]
     },
     "actions": {
-        "ax12": {
-            "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_00000000-if00-port0",
-            "baud": 115200
-        },
+        "baud": 115200,
+        "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_00000000-if00-port0",
         "qik": {
             "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0",
             "baud": 115200
@@ -102,15 +100,15 @@
                     "desc": "Avant gauche (0x70)",
                     "address": 112,
                     "maxAnalogGain": 31,
-                    "range": 13,
+                    "range": 135,
                     "x": 80,
                     "y": 130,
-                    "angle": 30,
+                    "angle": 45,
                     "threshold": 350
                 },
                 {
-                    "desc": "Avant milieu (0x74)",
-                    "address": 116,
+                    "desc": "Avant milieu (0x73)",
+                    "address": 115,
                     "maxAnalogGain": 31,
                     "range": 13,
                     "x": 80,
@@ -119,13 +117,13 @@
                     "threshold": 350
                 },
                 {
-                    "desc": "Avant droit (0x73) KO ?????",
-                    "address": 115,
+                    "desc": "Avant droit (0x74)",
+                    "address": 116,
                     "maxAnalogGain": 31,
                     "range": 13,
                     "x": 80,
-                    "y": -130,
-                    "angle": -30,
+                    "y": -135,
+                    "angle": -45,
                     "threshold": 350
                 },
                 {
@@ -136,7 +134,7 @@
                     "x": -80,
                     "y": 0,
                     "angle": 180,
-                    "threshold": 280
+                    "threshold": 350
                 }
             ]
         }
