--- a/config/2022/config.json
+++ b/config/2022/config.json
@@ -68,11 +68,13 @@
     },
     "actions": {
         "ax12": {
+            "comment": "FTDI",
             "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0",
             "baud": 115200
         },
         "serial": {
-            "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0",
+            "comment": "Arduino",
+            "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.2:1.0-port0",
             "baud": 115200
         },
         "dataDir": "/home/pi/IA/actions/",
