--- a/src/main/java/actions/a2022/actions/fenwick_ascenseur_pompe_release.json
+++ b/src/main/java/actions/a2022/actions/fenwick_ascenseur_pompe_release.json
@@ -1,1 +1,13 @@
-{}
+{
+    "actionPools": [
+        {
+            "actions": [
+                {
+                    "actionId": "actionSerialFlag",
+                    "serialFlagId": "DTR",
+                    "serialFlagEnabled": false
+                }
+            ]
+        }
+    ]
+}
