On accueille avec enthousiasme l'électrovanne de la petite princesse sur la grosse

--- a/src/main/java/actions/a2022/actions/fenwick_ascenseur_pompe_release.json
+++ b/src/main/java/actions/a2022/actions/fenwick_ascenseur_pompe_release.json
@@ -6,6 +6,28 @@
                     "actionId": "actionSerialFlag",
                     "serialFlagId": "DTR",
                     "serialFlagEnabled": false
+                },
+                {
+                    "actionId": "actionSerialFlag",
+                    "serialFlagId": "RTS",
+                    "serialFlagEnabled": true
+                }
+            ]
+        },
+        {
+            "actions": [
+                {
+                    "actionId": "actionWaiting",
+                    "waitingTimeMs": 1000
+                }
+            ]
+        },
+        {
+            "actions": [
+                {
+                    "actionId": "actionSerialFlag",
+                    "serialFlagId": "RTS",
+                    "serialFlagEnabled": false
                 }
             ]
         }
