--- a/config/2023/config.json
+++ b/config/2023/config.json
@@ -1,12 +1,12 @@
 {
-    "desc": "Configuration du robot 2023 - R.O.B Princess",
+    "desc": "Configuration du robot 2023 - Cooking Princess",
     "gpioColorSelector": 4,
     "gpioTirette": 5,
     "matchDuration": 99,
     "table0Path": "table0.tbl",
     "table3000Path": "table3000.tbl",
     "tableJsonPath": "table.json",
-    "commandFile": "config/2022/configCollection.json",
+    "commandFile": "config/2023/configCollection.json",
     "lcd": {
         "type": "full",
         "i2cAddress": 81,
