--- a/config/2023/config_PMI.json
+++ b/config/2023/config_PMI.json
@@ -115,10 +115,12 @@
     },
     "actions": {
         "ax12": {
+            "comment": "FTDI",
             "baud": 115200,
-            "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0"
+            "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.3:1.0-port0"
         },
-        "qik": {
+        "serial": {
+            "comment": "Turbine",
             "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0",
             "baud": 9600
         },
