config et debug

--- a/config/2023/config_PMI.json
+++ b/config/2023/config_PMI.json
@@ -14,8 +14,8 @@
         "lineLength": 16
     },
     "loggerSocket": {
-        "active": false,
-        "host": "192.168.0.106",
+        "active": true,
+        "host": "192.168.0.103",
         "port": 4269,
         "logPort": 1664,
         "who": "picratepi"
