--- a/config/2023/config_PMI.json
+++ b/config/2023/config_PMI.json
@@ -1,5 +1,5 @@
 {
-    "desc": "Configuration du robot PMI 2023 - Puking Princess",
+    "desc": "Configuration du robot PMI 2023 - Cherry Princess",
     "gpioColorSelector": 5,
     "gpioTirette": 4,
     "matchDuration": 100,
