--- a/config/2023/config.json
+++ b/config/2023/config.json
@@ -123,7 +123,7 @@
             "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
             "baud": 115200
         },
-        "dataDir": "src/main/java/actions/a2023/actions",
+        "dataDir": "/home/pi/IA/actions/",
         "init": [3, 4],
         "funnyAction": {
             "actionId": 12,
