--- a/config/2023/config_PMI.json
+++ b/config/2023/config_PMI.json
@@ -117,12 +117,12 @@
         "ax12": {
             "comment": "FTDI",
             "baud": 115200,
-            "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.3:1.0-port0"
+            "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0"
         },
         "serial": {
             "comment": "Turbine",
-            "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0",
-            "baud": 9600
+            "serie": "/dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0",
+            "baud": 115200
         },
         "dataDir": "/home/pi/IA/actions/",
         "init": [1],
