--- a/config/2023/config.json
+++ b/config/2023/config.json
@@ -81,11 +81,15 @@
             },
             {
                 "type": "go",
-                "dist": 200
+                "dist": 202
             },
             {
                 "type": "turn",
                 "dist": -90
+            },
+            {
+                "type": "go",
+                "dist": -400
             },
             {
                 "type": "go_timed",
@@ -93,7 +97,7 @@
             },
             {
                 "type": "set_y",
-                "value": 78,
+                "value": 1922,
                 "theta": 1.57079632679
             },
             {
@@ -101,7 +105,7 @@
                 "dist": 300
             },
             {
-                "type": "goto",
+                "type": "goto_back",
                 "x": 2720,
                 "y": 225
             },
